<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:id="@+id/act1"
    tools:context=".MainActivity"
    android:gravity="center"
    android:background="#090909">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/l1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:padding="12dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_a"
                android:id="@+id/team_a"
                android:textSize="30sp"
                android:textColor=" #ffe033"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:id="@+id/zero"
                android:textSize="30sp"
                android:textColor="#ffe033"
                android:layout_marginBottom="10dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str1a"
                android:id="@+id/str1a"
                android:textSize="20sp"
                android:background="#8AE2ED"
                android:layout_marginBottom="10dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str2a"
                android:id="@+id/str2a"
                android:textSize="20sp"
                android:background="#8AE2ED"
                android:layout_marginBottom="10dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str3a"
                android:id="@+id/str3a"
                android:textSize="20sp"
                android:background="#8AE2ED"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="8dp">

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@android:color/white" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="12dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_b"
                android:id="@+id/team_b"
                android:textSize="30sp"
                android:textColor=" #ffe033"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero1"
                android:id="@+id/zero1"
                android:textSize="30sp"
                android:textColor="	 #ffe033"
                android:layout_marginBottom="10dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str1b"
                android:id="@+id/str1b"
                android:textSize="20sp"
                android:background="#8AE2ED"
                android:layout_marginBottom="10dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str2b"
                android:id="@+id/str2b"
                android:textSize="20sp"
                android:background="#8AE2ED"
                android:layout_marginBottom="10dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str3b"
                android:id="@+id/str3b"
                android:textSize="20sp"
                android:background="#8AE2ED"
                android:layout_marginBottom="10dp"/>


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/l2"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="40dp"
        android:layout_below="@+id/l1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:id="@+id/reset"
            android:textSize="20sp"
            android:background=" #ffe033"
            android:layout_marginTop="5dp"/>

    </LinearLayout>



</RelativeLayout>